<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background_color"
    android:layout_height="match_parent"
    tools:context=".RegisterPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="112dp"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/logo_tieng_viet"  />

            <EditText
                android:id="@+id/SignUpPage_un"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/email"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:background="@drawable/edit_text_shape"
                android:padding="15dp"/>

            <Button
                android:id="@+id/SignUpPage_SUbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_signup_button_shape"
                app:backgroundTint="@null"
                android:text="@string/send_email"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/SignUpPage_SignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/remember_acc"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>