<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<!--amount-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/amount"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <EditText
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="đơn vị vnd"
                        android:id="@+id/amount_id"
                        android:textAppearance="?textAppearanceBodyLarge"/>

                </RelativeLayout>

            </LinearLayout>
<!--type-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/type"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textImeMultiLine"
                        android:textColor="@color/black"
                        android:id="@+id/type_id" />

                </RelativeLayout>

            </LinearLayout>
<!--note-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="true">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/note" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textImeMultiLine"
                        android:textColor="@color/black"
                        android:id="@+id/note_id" />

                </RelativeLayout>

            </LinearLayout>
<!--button-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_signup_button_shape"
                        app:backgroundTint="@null"
                        android:textColor="@color/black"
                        android:id="@+id/button_cancel"
                        android:textAppearance="?textAppearanceBodyLarge"
                        android:text="@string/cancel"/>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_signup_button_shape"
                        app:backgroundTint="@null"
                        android:textColor="@color/black"
                        android:id="@+id/save_button"
                        android:textAppearance="?textAppearanceBodyLarge"
                        android:text="@string/save"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>